# cpac

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  cpac-api.service  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yaml
.github/Dockerfiles/: c-pac_api.latest.Dockerfile  c-pac_api.nightly.Dockerfile
.github/workflows/: pythonpublish.yaml  pythonpublish.yml  test_cpac.yaml  test_cpac.yml  update_README_usage.sh
.pre-commit-hooks/: update_README.py
.travis/: deploy_to_pypi.sh  setup.sh  setup_singularity.sh  update_README_usage.sh
docs/: Makefile  conf.py  index.rst
src/cpac/: __init__.py  __main__.py  utils.py
src/cpac/api/: __main__.py  authKey.py  client.py  schedules.py  scheduling.py  server.py
src/cpac/api/backends/: __init__.py  base.py  container.py  docker.py  singularity.py  slurm.py  utils.py
src/cpac/api/backends/data/: slurm.sh
src/cpac/api/data/: slurm.sh
src/cpac/backends/: __init__.py  apptainer.py  backend.py  core.py  docker.py  platform.py  singularity.py
src/cpac/backends/apptainer/: __init__.py  apptainer.py  spython.py
src/cpac/helpers/: __init__.py  cpac_parse_resources.py  cpac_read_crash.py
src/cpac/scheduler/: __init__.py  api.py  client.py  process.py
src/cpac/utils/: __init__.py  bare_wrap.py  checks.py  osutils.py  utils.py
src/cpaki/: __main__.py  skeleton.py
src/cpaki/backends/: backend.py  docker.py
src/cpaki/scheduler/: __init__.py
src/theodore/: __main__.py  utils.py
src/theodore/backends/: __init__.py  docker.py
src/theodore/scheduler/: __init__.py  api.py  client.py  process.py
tests/: .pylintrc  CONSTANTS.py  __init__.py  conftest.py  data_settings_template.yml  test_backend_slurm.py  test_backends_docker.py  test_cpac.py  test_cpac___main__.py  test_cpac_crash.py  test_cpac_gradients.py  test_cpac_group.py  test_cpac_installation.py  test_cpac_run.py  test_cpac_utils.py  test_cpac_version.py  test_crash.py  test_platforms_docker.py  test_platforms_singularity.py  test_remapping.py  test_schedule.py  test_scheduler.py  test_scheduling.py  test_scheduling_api.py  test_scheduling_api_results.py  test_scheduling_api_websocket.py  test_scheduling_client.py  test_scheduling_docker.py  test_scheduling_schedules.py  test_scheduling_singularity.py  test_skeleton.py  test_utils.py  test_wrapped.py  travis_install.sh  utils.py
tests/test_data/: Dockerfile  Singularity  data_config_template.yml  data_config_template_large.yml  data_config_template_single.yml  data_config_template_single_error.yml  data_settings_template.yml  docker.py  dummy.py  entrypoint.py  fixtures.py  minimal.min.yaml  singularity.py  slurm.py  test_pickle.pklz
tests/test_data/cpac_output/crash/: crash-file.pklz
tests/test_data/cpac_output/log/pipeline_analysis/sub-1_ses-1/: strategy.dot
tests/test_data/slurm/: Dockerfile  README.md  __init__.py  docker-compose.yml  register_cluster.sh  slurm.conf
tests/test_data/slurm/mariadb-init/: install_db.sql
tests/test_data/slurm_data/: Dockerfile  docker-compose.yml  docker-entrypoint.sh  id_rsa  id_rsa.pub
tests/test_data/slurm_data/mariadb-init/: 000_logs.sql  001_dump.sql
tools/: ami-software-setup.sh  build-test-image.sh
