[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.aliases]
build = "poetry build"
release = "poetry publish"
test = "pytest"

[tool.devpi.upload]
no-vcs = "1"
formats = "bdist_wheel"

[tool.poetry]
name = "cpac"
description = "C-PAC Python Package"
authors = ["C-PAC developers <cpac@cnl.childmind.org>"]
license = "MIT"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics"
]
documentation = "https://fcp-indi.github.io/docs/latest/user/cpac"
readme = "README.rst"
repository = "https://github.com/FCP-INDI/cpac"
version = "1.8.6.post1.dev1"

[tool.poetry.dependencies]
python = ">=3.10"
docker = ">=4.2.1"
dockerpty = "*"
docker-pycreds = "*"
importlib_metadata = {version = "*", markers = "python_version < '3.8'"}
pandas = [
  {version = ">=0.23.4"},
  {version = "2.2.2", markers = "python_version >= '3.11' and python_version < '4.0' and extra == 'tsconcat'"}
]
poetry = "*"
pyyaml = "*"
rich = "*"
semver = "*"
spython = ">=0.0.81"
tabulate = ">=0.8.6"
tornado = "*"
websocket-client = "*"
alabaster = {version = "*", optional = true}
ba_timeseries_gradients = {git = "https://github.com/cmi-dair/ba-timeseries-gradients.git", optional = true, markers = "python_version >= '3.11' and python_version < '3.12'"}
ba-tsconcat = {version = "==0.1.1", optional = true, markers = "python_version >= '3.11' and python_version < '4.0'"}
bids2table = {version = "0.1.0b0", markers = "extra == 'tsconcat'"}
coveralls = {version = "*", optional = true}
elbow = {version = "0.1.1", markers = "extra == 'tsconcat'"}
imagesize = {version = "*", optional = true}
nibabel = {version = "5.2.1", markers = "extra == 'tsconcat'"}
pyarrow = {version = "16.0.0", markers = "extra == 'tsconcat'"}
pytest = {version = "*", optional = true}
pytest-cov = {version = "*", optional = true}
pytest-remotedata = {version = ">=0.3.2", optional = true}
pytest-runner = {version = "*", optional = true}
sphinx = {version = "*", optional = true}

[tool.poetry.extras]
dev = ["coveralls", "pytest", "pytest-remotedata", "pytest-runner", "sphinx"]
gradients = ["ba_timeseries_gradients"]
testing = ["alabaster", "imagesize", "pytest", "pytest-cov", "pytest-runner", "sphinx"]
tsconcat = ["ba-tsconcat"]

[tool.poetry.scripts]
cpac = "cpac.__main__:run"

[tool.pytest.ini_options]
addopts = "-s"
# --cov cpac --cov-report term-missing -s
# -s
# --verbose
norecursedirs = [
  "dist",
  "build",
  ".tox"
]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["docs/conf.py"]
extend-select = ["A", "C4", "D", "G", "I", "ICN", "NPY", "PL", "RET", "RSE", "RUF", "Q", "W"]
target-version = "py38"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["cpac"]
no-lines-before = ["collab", "other-first-party", "local-folder"]
order-by-type = false
section-order = ["future", "standard-library", "third-party", "collab", "other-first-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"collab" = ["nipype", "spython"]
"other-first-party" = ["ba_timeseries_gradients", "bids2table", "tsconcat"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 50
max-returns = 12
max-statements = 100

[tool.ruff.lint.pyupgrade]
# Until variants Python ≥ 3.10
keep-runtime-typing = true
