# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = cpac
description = C-PAC Python Package
author = C-PAC developers
author-email = cpac@cnl.childmind.org
license = mit
url = https://github.com/FCP-INDI/cpac-python-package
long-description = file: README.rst
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
version = 0.1.1

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
use_scm_version = True
setup_requires = setuptools_scm
install_requires = docker
python_requires = >=3.5

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-runne

[options.entry_points]
console_scripts =
    cpac = cpac.__main__:run

[test]
addopts = --verbose -s
extras = True


[tool:pytest]
addopts = -s
# --cov cpac --cov-report term-missing -s
# -s
# --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
build = bdist_wheel
release = build upload
test = pytest

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
